5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1675_1932.log
== TEST (2019-04-29 20:34:05) 
-- CODE:
do1 = float(input("distancia A1:"))
dn1 = float(input("distacia B1:"))
do2 =float(input("distancia A2:"))
dn2 =float(input("distancia B2:"))
do3 =float(input("distancia A3:"))
dn3 =float(input("distancia B3:"))

f1 = do1/dn1
f2 = do2/dn2
f3 = do3/dn3

if(f1<f2):
	a = abs(f2-f1)
elif(f1<f3):
	b = abs(f3-f1)
elif(f2<f1):
	a = abs(f1-f2)
elif(f2<f3):
	c = abs(f3-f2)
elif(f3<f2):
	c = abs(f2-f3)
else:
	b = abs(f1-f3)

if(a<b<c):
	print("1 e 2")
elif(b<c<a):
	print("1 e 3")
elif(c<a<b):
	print("2 e 3")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 25, in <module>
    if(a<b<c):
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 20:35:25) 
-- CODE:
do1 = float(input("distancia A1:"))
dn1 = float(input("distacia B1:"))
do2 = float(input("distancia A2:"))
dn2 = float(input("distancia B2:"))
do3 = float(input("distancia A3:"))
dn3 = float(input("distancia B3:"))

f1 = do1/dn1
f2 = do2/dn2
f3 = do3/dn3

if(f1<f2):
	a = abs(f2-f1)
elif(f1<f3):
	b = abs(f3-f1)
elif(f2<f1):
	a = abs(f1-f2)
elif(f2<f3):
	c = abs(f3-f2)
elif(f3<f2):
	c = abs(f2-f3)
else:
	b = abs(f1-f3)

if(a<b<c):
	print("1 e 2")
elif(b<c<a):
	print("1 e 3")
elif(c<a<b):
	print("2 e 3")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 25, in <module>
    if(a<b<c):
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 20:44:11) 
-- CODE:
do1 = float(input("distancia A1:"))
dn1 = float(input("distacia B1:"))
do2 = float(input("distancia A2:"))
dn2 = float(input("distancia B2:"))
do3 = float(input("distancia A3:"))
dn3 = float(input("distancia B3:"))

f1 = do1/dn1
f2 = do2/dn2
f3 = do3/dn3

c = min(f1,f2,f3)

print(c)


if(f1<f2):
	a = abs(f2-f1)
elif(f1<f3):
	b = abs(f3-f1)
elif(f2<f1):
	a = abs(f1-f2)
elif(f2<f3):
	c = abs(f3-f2)
elif(f3<f2):
	c = abs(f2-f3)
else:
	b = abs(f1-f3)

if(a<b<c):
	print("1 e 2")
elif(b<c<a):
	print("1 e 3")
elif(c<a<b):
	print("2 e 3")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 30, in <module>
    if(a<b<c):
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 20:46:06) 
-- CODE:
do1 = float(input("distancia A1:"))
dn1 = float(input("distacia B1:"))
do2 = float(input("distancia A2:"))
dn2 = float(input("distancia B2:"))
do3 = float(input("distancia A3:"))
dn3 = float(input("distancia B3:"))

f1 = do1/dn1
f2 = do2/dn2
f3 = do3/dn3

c = min(f1,f2,f3)

print(c)


#if(f1<f2):
	#a = abs(f2-f1)
#elif(f1<f3):
	#b = abs(f3-f1)
#elif(f2<f1):
	#a = abs(f1-f2)
#elif(f2<f3):
	#c = abs(f3-f2)
#elif(f3<f2):
	#c = abs(f2-f3)
#else:
	#b = abs(f1-f3)

#if(a<b<c):
#	print("1 e 2")
#elif(b<c<a):
#	print("1 e 3")
#elif(c<a<b):
#	print("2 e 3")
-- OUTPUT:
1.0606060606060606
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 20:54:11) 
-- CODE:
do1 = float(input("distancia A1:"))
dn1 = float(input("distacia B1:"))
do2 = float(input("distancia A2:"))
dn2 = float(input("distancia B2:"))
do3 = float(input("distancia A3:"))
dn3 = float(input("distancia B3:"))

f1 = do1/dn1
f2 = do2/dn2
f3 = do3/dn3

a = min(f1-f2,f2-f1,f1-f3,f3-f1,f2-f3,f3-f2)
print(a)

-- OUTPUT:
-0.6893939393939394
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 20:57:37) 
-- CODE:
do1 = float(input("distancia A1:"))
dn1 = float(input("distacia B1:"))
do2 = float(input("distancia A2:"))
dn2 = float(input("distancia B2:"))
do3 = float(input("distancia A3:"))
dn3 = float(input("distancia B3:"))

f1 = do1/dn1
f2 = do2/dn2
f3 = do3/dn3

a = f1-f2
b = f2-f3
c = f3-f1

x = min(a,b,c)

print(x)
-- OUTPUT:
-0.6865079365079365
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 20:59:26) 
-- CODE:
do1 = float(input("distancia A1:"))
dn1 = float(input("distacia B1:"))
do2 = float(input("distancia A2:"))
dn2 = float(input("distancia B2:"))
do3 = float(input("distancia A3:"))
dn3 = float(input("distancia B3:"))

f1 = do1/dn1
f2 = do2/dn2
f3 = do3/dn3

print(f1)
print(f2)
print(f3)

-- OUTPUT:
1.0634920634920635
1.75
1.0606060606060606
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:46:43) 
-- CODE:
do1 = float(input("distancia A1:"))
dn1 = float(input("distacia B1:"))
do2 = float(input("distancia A2:"))
dn2 = float(input("distancia B2:"))
do3 = float(input("distancia A3:"))
dn3 = float(input("distancia B3:"))

f1 = do1/dn1
f2 = do2/dn2
f3 = do3/dn3

if abs(f1-f2)<abs(f2-f3)or abs(f1-f2)<abs(f3-f1):
	print("1 e 2")
elif abs(f2-f3)<abs(f1-f2)or abs(f2-f3)<abs(f1-f3):
	print("2 e 3")
elif abs(f1-f3)<abs(f2-f3) or abs(f1-f3)<abs(f1-f2):
	print("1 e 3")

-- OUTPUT:
1 e 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:47:10) 
-- CODE:
do1 = float(input("distancia A1:"))
dn1 = float(input("distacia B1:"))
do2 = float(input("distancia A2:"))
dn2 = float(input("distancia B2:"))
do3 = float(input("distancia A3:"))
dn3 = float(input("distancia B3:"))

f1 = do1/dn1
f2 = do2/dn2
f3 = do3/dn3

if abs(f1-f2)<abs(f2-f3)or abs(f1-f2)<abs(f3-f1):
	print("1 e 2")
elif abs(f2-f3)<abs(f1-f2)or abs(f2-f3)<abs(f1-f3):
	print("2 e 3")
elif abs(f1-f3)<abs(f2-f3) or abs(f1-f3)<abs(f1-f2):
	print("1 e 3")

-- OUTPUT:
1 e 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:47:42) 
-- CODE:
do1 = float(input("distancia A1:"))
dn1 = float(input("distacia B1:"))
do2 = float(input("distancia A2:"))
dn2 = float(input("distancia B2:"))
do3 = float(input("distancia A3:"))
dn3 = float(input("distancia B3:"))

f1 = do1/dn1
f2 = do2/dn2
f3 = do3/dn3

if abs(f1-f2)<abs(f2-f3)or abs(f1-f2)<abs(f3-f1):
	print("1 e 2")
elif abs(f2-f3)<abs(f1-f2)or abs(f2-f3)<abs(f1-f3):
	print("2 e 3")
elif abs(f1-f3)<abs(f2-f3) or abs(f1-f3)<abs(f1-f2):
	print("1 e 3")

-- OUTPUT:
1 e 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:49:45) 
-- CODE:
do1 = float(input("distancia A1:"))
dn1 = float(input("distacia B1:"))
do2 = float(input("distancia A2:"))
dn2 = float(input("distancia B2:"))
do3 = float(input("distancia A3:"))
dn3 = float(input("distancia B3:"))

f1 = do1/dn1
f2 = do2/dn2
f3 = do3/dn3

if abs(f1-f2)<abs(f2-f3) and abs(f1-f2)<abs(f3-f1):
	print("1 e 2")
elif abs(f2-f3)<abs(f1-f2) and abs(f2-f3)<abs(f1-f3):
	print("2 e 3")
elif abs(f1-f3)<abs(f2-f3) and abs(f1-f3)<abs(f1-f2):
	print("1 e 3")

-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:50:16) 
-- CODE:
do1 = float(input("distancia A1:"))
dn1 = float(input("distacia B1:"))
do2 = float(input("distancia A2:"))
dn2 = float(input("distancia B2:"))
do3 = float(input("distancia A3:"))
dn3 = float(input("distancia B3:"))

f1 = do1/dn1
f2 = do2/dn2
f3 = do3/dn3

if abs(f1-f2)<abs(f2-f3) and abs(f1-f2)<abs(f3-f1):
	print("1 e 2")
elif abs(f2-f3)<abs(f1-f2) and abs(f2-f3)<abs(f1-f3):
	print("2 e 3")
elif abs(f1-f3)<abs(f2-f3) and abs(f1-f3)<abs(f1-f2):
	print("1 e 3")

-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:50:31) 
-- CODE:
do1 = float(input("distancia A1:"))
dn1 = float(input("distacia B1:"))
do2 = float(input("distancia A2:"))
dn2 = float(input("distancia B2:"))
do3 = float(input("distancia A3:"))
dn3 = float(input("distancia B3:"))

f1 = do1/dn1
f2 = do2/dn2
f3 = do3/dn3

if abs(f1-f2)<abs(f2-f3) and abs(f1-f2)<abs(f3-f1):
	print("1 e 2")
elif abs(f2-f3)<abs(f1-f2) and abs(f2-f3)<abs(f1-f3):
	print("2 e 3")
elif abs(f1-f3)<abs(f2-f3) and abs(f1-f3)<abs(f1-f2):
	print("1 e 3")

-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 21:50:47) 
-- CODE:
do1 = float(input("distancia A1:"))
dn1 = float(input("distacia B1:"))
do2 = float(input("distancia A2:"))
dn2 = float(input("distancia B2:"))
do3 = float(input("distancia A3:"))
dn3 = float(input("distancia B3:"))

f1 = do1/dn1
f2 = do2/dn2
f3 = do3/dn3

if abs(f1-f2)<abs(f2-f3) and abs(f1-f2)<abs(f3-f1):
	print("1 e 2")
elif abs(f2-f3)<abs(f1-f2) and abs(f2-f3)<abs(f1-f3):
	print("2 e 3")
elif abs(f1-f3)<abs(f2-f3) and abs(f1-f3)<abs(f1-f2):
	print("1 e 3")

-- EXECUTION TIME:
0.117336
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e 3
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:
1 e 2
-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:
2 e 3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 23:13:01) 
-- CODE:
do1 = float(input("distancia A1:"))
dn1 = float(input("distacia B1:"))
do2 = float(input("distancia A2:"))
dn2 = float(input("distancia B2:"))
do3 = float(input("distancia A3:"))
dn3 = float(input("distancia B3:"))

f1 = do1/dn1
f2 = do2/dn2
f3 = do3/dn3

if abs(f1-f2)<abs(f2-f3) and abs(f1-f2)<abs(f3-f1):
	print("1 e 2")
elif abs(f2-f3)<abs(f1-f2) and abs(f2-f3)<abs(f1-f3):
	print("2 e 3")
elif abs(f1-f3)<abs(f2-f3) and abs(f1-f3)<abs(f1-f2):
	print("1 e 3")

-- EXECUTION TIME:
0.141736
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e 3
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:
1 e 2
-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:
2 e 3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
